# ATAT-All-Terrain-Autonomous-Transport

./: README.md
Arduino/: README.md
Arduino/HCSR04_multi/: HCSR04_multi.ino
Arduino/battery_test/: battery_test.ino
Arduino/libraries/: sensors.cpp
Arduino/libraries/Telemetry/: Telemetry.cpp  Telemetry.h
Arduino/libraries/motor_control/: drive.cpp  drive.h  motor_control.ino
Arduino/libraries/sensor_class/: sensors.cpp  sensors.h
Arduino/libraries/sensors/: sensors.cpp  sensors.h
Arduino/main_algo/: main_algo.ino
Arduino/motor_control/: drive.cpp  drive.h  motor_control.ino
Arduino/motor_test_control_scheme/: motor_test_control_scheme.ino
Arduino/sensor_class/: sensors.cpp  sensors.h  sensors_tests.ino
Arduino/sensors_motors_integration_test/: sensors_motors_integration_test.ino
Arduino/telemetry/: telemetry.ino  telemetry.pb.c
arduino/motor_control/: drive.cpp  drive.h  motor_control.ino
arduino/motor_control_test/: motor_control_test.ino
arduino/pwm_control/: drive.h  pwm_control.ino
arduino/sensors/: sensors.cpp  sensors.h  sensors.ino
pipetest/: pipetest.ino
python/: requirements.txt
python/motor_control_analysis/: plot_data.py
zephyr_apps/: Kconfig  README.md  west.yml
zephyr_apps/app/: CMakeLists.txt
zephyr_apps/app/src/: main.c
zephyr_apps/sample_app/: CMakeLists.txt  README.md
zephyr_sample_app/: .gitignore  CMakeLists.txt  Kconfig  README.md  west.yml
zephyr_sample_app/app/: CMakeLists.txt  Kconfig  README.md  prj.conf
zephyr_sample_app/app/boards/: custom_board.overlay
zephyr_sample_app/app/src/: main.c
(+21 files in other folders)
